agrego cambios varios

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,9 +5,9 @@
     class="example-icon"
     arial-label="Example icon-button with menu icon"
   >
-    <mat-icon>menu_books</mat-icon>
+    <mat-icon>sports_soccer</mat-icon>
   </a>
-  <span>Portal de exámenes</span>
+  <span>Turnos Futbol 5</span>
   <span class="example-spacer"></span>
   <a
     *ngIf = "!isLoggedIn"
